# ckanext-fdt-sqlalchemy

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/fdt_sqlalchemy/: plugin.py
ckanext/fdt_sqlalchemy/tests/: test_plugin.py
