[metadata]
name = ckanext-fdt-sqlalchemy
version = 0.0.1
description = Enable SQLAlchemy pane of Flask-DebugToolbar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckan/ckanext-fdt-sqlalchemy
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN SQL debug

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             fdt_sqlalchemy = ckanext.fdt_sqlalchemy.plugin:FdtSqlalchemyPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
deps =
     flask-sqlalchemy~=2.5

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/fdt_sqlalchemy/i18n/ckanext-fdt_sqlalchemy.pot
width = 80

[init_catalog]
domain = ckanext-fdt_sqlalchemy
input_file = ckanext/fdt_sqlalchemy/i18n/ckanext-fdt_sqlalchemy.pot
output_dir = ckanext/fdt_sqlalchemy/i18n

[update_catalog]
domain = ckanext-fdt_sqlalchemy
input_file = ckanext/fdt_sqlalchemy/i18n/ckanext-fdt_sqlalchemy.pot
output_dir = ckanext/fdt_sqlalchemy/i18n
previous = true

[compile_catalog]
domain = ckanext-fdt_sqlalchemy
directory = ckanext/fdt_sqlalchemy/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
